--- a/histogramming_template.ipynb
+++ b/histogramming_template.ipynb
@@ -42,9 +42,9 @@
    },
    "outputs": [],
    "source": [
-    "def has_trigger(res):\n",
-    "    if 'trigger' in res['JetMET0_slimmed']['cutflow'].keys():\n",
-    "        for k in list(res['JetMET0_slimmed']['hists'].keys()):\n",
+    "def has_trigger(res, dataset='JetMET0_slimmed'):\n",
+    "    if 'trigger' in res[dataset]['cutflow'].keys():\n",
+    "        for k in list(res[dataset]['hists'].keys()):\n",
     "            if ('anomaly_score_L1_' in k) or ('anomaly_score_HLT_' in k):\n",
     "                return k.split('anomaly_score_')[1]\n",
     "    else:\n",
