moved some helper functions to utils

--- a/hist_plotting.ipynb
+++ b/hist_plotting.ipynb
@@ -34,7 +34,7 @@
     "#from axo_studies import hist_selection, reco_objects, l1_objects\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import utils"
+    "import plotting_utils"
    ]
   },
   {
@@ -112,7 +112,7 @@
     "    xlabel = label_maker(thing_to_plot)\n",
     "    for trigger in hist_result[dataset]['trigger']:\n",
     "        trigger_label = get_trigger_label(trigger,plotting_config)\n",
-    "        utils.draw_hist1d(\n",
+    "        plotting_utils.draw_hist1d(\n",
     "                hist_in = hists[thing_to_plot],\n",
     "                ax=ax,\n",
     "                trigger=trigger, \n",
@@ -152,7 +152,7 @@
     "                    trigger_label = label_maker(thing_to_plot)\n",
     "                else:   \n",
     "                    trigger_label = get_trigger_label(trigger,plotting_config)\n",
-    "                l = utils.draw_efficiency(\n",
+    "                l = plotting_utils.draw_efficiency(\n",
     "                            hist_in = hists[thing_to_plot],\n",
     "                            ax=ax,\n",
     "                            orthogonal_trigger=trigger, \n",
@@ -192,7 +192,7 @@
     "    for trigger in hist_result[dataset]['trigger']:\n",
     "        if trigger != config['orthogonal_trigger']:\n",
     "            trigger_label = get_trigger_label(trigger,plotting_config)\n",
-    "            l = utils.draw_efficiency(\n",
+    "            l = plotting_utils.draw_efficiency(\n",
     "                    hist_in = hists[thing_to_plot],\n",
     "                    ax=ax,\n",
     "                    orthogonal_trigger=config['orthogonal_trigger'], \n",
@@ -228,7 +228,7 @@
     "    triggers = [\"DST_PFScouting_ZeroBias_DST_PFScouting_AXONominal\",\"DST_PFScouting_ZeroBias_all_l1_triggers\"]\n",
     "    \n",
     "    trigger_labels = [get_trigger_label(triggers[0],plotting_config), get_trigger_label(triggers[1],plotting_config)]\n",
-    "    l = utils.draw_efficiency_ratios(\n",
+    "    l = plotting_utils.draw_efficiency_ratios(\n",
     "            hist_in = hists[thing_to_plot],\n",
     "            ax=ax,\n",
     "            orthogonal_trigger=config['orthogonal_trigger'], \n",
